<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment0115">

    <fragment
        android:id="@+id/dashboardFragment0115"
        android:name="com.example.tugasbesar.ui.main.DashboardFragment0115"
        android:label="@string/dashboard" />

    <fragment
        android:id="@+id/taskListFragment0115"
        android:name="com.example.tugasbesar.ui.tasks.TaskListFragment0115"
        android:label="@string/tasks">
        <action
            android:id="@+id/action_taskList_to_taskDetail0115"
            app:destination="@id/taskDetailFragment0115" />
    </fragment>

    <fragment
        android:id="@+id/taskDetailFragment0115"
        android:name="com.example.tugasbesar.ui.tasks.TaskDetailFragment0115"
        android:label="@string/add_task">
        <argument
            android:name="taskId0115"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="taskTitle0115"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="taskDescription0115"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="taskDeadline0115"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="taskStatus0115"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/eventListFragment0115"
        android:name="com.example.tugasbesar.ui.events.EventListFragment0115"
        android:label="@string/events">
        <action
            android:id="@+id/action_eventList_to_eventDetail0115"
            app:destination="@id/eventDetailFragment0115" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailFragment0115"
        android:name="com.example.tugasbesar.ui.events.EventDetailFragment0115"
        android:label="@string/add_event">
        <argument
            android:name="eventId0115"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="eventTitle0115"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="eventDescription0115"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="eventLocation0115"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="eventDate0115"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/calendarFragment0115"
        android:name="com.example.tugasbesar.ui.calendar.CalendarFragment0115"
        android:label="@string/calendar" />

</navigation>
